loco-rs/src/controller/snapshots/loco_rs__controller__format__tests__builder_text_response.snap
---
source: src/controller/format.rs
expression: response
---
Response {
    status: 200,
    version: HTTP/1.1,
    headers: {
        "content-type": "text/plain; charset=utf-8",
    },
    body: Body(
        UnsyncBoxBody,
    ),
}
