loco-rs/src/controller/snapshots/loco_rs__controller__format__tests__view_response.snap
---
source: src/controller/format.rs
expression: "view(&v, \"template/none.html\", serde_json::json!({}))"
---
Err(
    Tera(
        Error {
            kind: TemplateNotFound(
                "template/none.html",
            ),
            source: None,
        },
    ),
)
